docs/alphaindexes/5.6.x/rpccommands.md
# Modules RPC Commands

 ([a](#a))  ([b](#b))  ([c](#c))  ([d](#d))  ([e](#e))  ([f](#f))  ([g](#g))  ([h](#h))  ([i](#i))  ([j](#j))  ([k](#k))  ([l](#l))  ([m](#m))  ([n](#n))  ([o](#o))  ([p](#p))  ([q](#q))  ([r](#r))  ([s](#s))  ([t](#t))  ([u](#u))  ([v](#v))  ([w](#w))  ([x](#x))  ([y](#y))  ([z](#z)) 

## [a]

| Name | Module Name |
|------|-------------|
| **app_jsdt.api_list** | [app_jsdt](https://www.kamailio.org/docs/modules/5.6.x/modules/app_jsdt.html#app_jsdt.r.api_list) |
| **app_jsdt.reload** | [app_jsdt](https://www.kamailio.org/docs/modules/5.6.x/modules/app_jsdt.html#app_jsdt.r.reload) |
| **app_lua.api_list** | [app_lua](https://www.kamailio.org/docs/modules/5.6.x/modules/app_lua.html#app_lua.r.api_list) |
| **app_lua.list** | [app_lua](https://www.kamailio.org/docs/modules/5.6.x/modules/app_lua.html#app_lua.r.list) |
| **app_lua.reload** | [app_lua](https://www.kamailio.org/docs/modules/5.6.x/modules/app_lua.html#app_lua.r.reload) |
| **app_perl.get_reset_cycles** | [app_perl](https://www.kamailio.org/docs/modules/5.6.x/modules/app_perl.html#app_perl.r.get_reset_cycles) |
| **app_perl.set_reset_cycles** | [app_perl](https://www.kamailio.org/docs/modules/5.6.x/modules/app_perl.html#app_perl.r.set_reset_cycles) |
| **app_python.api_list** | [app_python3](https://www.kamailio.org/docs/modules/5.6.x/modules/app_python3.html#app_python3.r.api_list) |
| **app_python.api_list** | [app_python](https://www.kamailio.org/docs/modules/5.6.x/modules/app_python.html#app_python.r.api_list) |
| **app_python.reload** | [app_python3](https://www.kamailio.org/docs/modules/5.6.x/modules/app_python3.html#app_python3.r.reload) |
| **app_python.reload** | [app_python](https://www.kamailio.org/docs/modules/5.6.x/modules/app_python.html#app_python.r.reload) |
| **app_ruby.api_list** | [app_ruby](https://www.kamailio.org/docs/modules/5.6.x/modules/app_ruby.html#app_ruby.r.api_list) |
| **app_ruby.reload** | [app_ruby](https://www.kamailio.org/docs/modules/5.6.x/modules/app_ruby.html#app_ruby.r.reload) |
| **app_sqlang.api_list** | [app_sqlang](https://www.kamailio.org/docs/modules/5.6.x/modules/app_sqlang.html#app_sqlang.r.api_list) |
| **app_sqlang.reload** | [app_sqlang](https://www.kamailio.org/docs/modules/5.6.x/modules/app_sqlang.html#app_sqlang.r.reload) |
| **autheph.add_secret** | [auth_ephemeral](https://www.kamailio.org/docs/modules/5.6.x/modules/auth_ephemeral.html#auth_eph.rpc.autheph.add_secret) |
| **autheph.dump_secrets** | [auth_ephemeral](https://www.kamailio.org/docs/modules/5.6.x/modules/auth_ephemeral.html#auth_eph.rpc.autheph.dump_secrets) |
| **autheph.rm_secret** | [auth_ephemeral](https://www.kamailio.org/docs/modules/5.6.x/modules/auth_ephemeral.html#auth_eph.rpc.autheph.rm_secret) |

## [b]

| Name | Module Name |
|------|-------------|
| **benchmark.enable_global** | [benchmark](https://www.kamailio.org/docs/modules/5.6.x/modules/benchmark.html#benchmark.rpc.enable_global) |
| **benchmark.enable_timer** | [benchmark](https://www.kamailio.org/docs/modules/5.6.x/modules/benchmark.html#benchmark.rpc.enable_timer) |
| **benchmark.granularity** | [benchmark](https://www.kamailio.org/docs/modules/5.6.x/modules/benchmark.html#benchmark.rpc.granularity) |
| **benchmark.loglevel** | [benchmark](https://www.kamailio.org/docs/modules/5.6.x/modules/benchmark.html#benchmark.rpc.loglevel) |
| **benchmark.timer_list** | [benchmark](https://www.kamailio.org/docs/modules/5.6.x/modules/benchmark.html#benchmark.rpc.timer_list) |
| **benchmark.timer_name_list** | [benchmark](https://www.kamailio.org/docs/modules/5.6.x/modules/benchmark.html#benchmark.rpc.timer_name_list) |

## [c]

| Name | Module Name |
|------|-------------|
| **call_obj.free** | [call_obj](https://www.kamailio.org/docs/modules/5.6.x/modules/call_obj.html#call_obj.rpc.free) |
| **call_obj.free_all** | [call_obj](https://www.kamailio.org/docs/modules/5.6.x/modules/call_obj.html#call_obj.rpc.free_all) |
| **call_obj.list** | [call_obj](https://www.kamailio.org/docs/modules/5.6.x/modules/call_obj.html#call_obj.rpc.list) |
| **call_obj.stats** | [call_obj](https://www.kamailio.org/docs/modules/5.6.x/modules/call_obj.html#call_obj.rpc.stats) |
| **cdp.disable_peer** | [cdp](https://www.kamailio.org/docs/modules/5.6.x/modules/cdp.html) |
| **cdp.enable_peer** | [cdp](https://www.kamailio.org/docs/modules/5.6.x/modules/cdp.html) |
| **cfgt.clean** | [cfgt](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgt.html#cfgt.r.clean) |
| **cfgt.list** | [cfgt](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgt.html#cfgt.r.list) |
| **cfgt.mask** | [cfgt](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgt.html#cfgt.r.mask) |
| **cfgutils.check_config_hash** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.check_config_hash) |
| **cfgutils.get_config_hash** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.get_config_hash) |
| **cfgutils.get_gflags** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.get_gflags) |
| **cfgutils.is_gflag** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.is_gflag) |
| **cfgutils.rand_get_prob** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.rand_get_prob) |
| **cfgutils.rand_reset_prob** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.rand_reset_prob) |
| **cfgutils.rand_set_prop** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.rand_set_prob) |
| **cfgutils.reset_gflag** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.reset_gflag) |
| **cfgutils.set_gflag** | [cfgutils](https://www.kamailio.org/docs/modules/5.6.x/modules/cfgutils.html#cfgutils.rpc.set_gflag) |
| **cnxcc.active_clients** | [cnxcc](https://www.kamailio.org/docs/modules/5.6.x/modules/cnxcc.html#cnxcc.rpc.active_clients) |
| **cnxcc.check_client** | [cnxcc](https://www.kamailio.org/docs/modules/5.6.x/modules/cnxcc.html#cnxcc.rpc.check_client) |
| **cnxcc.kill_call** | [cnxcc](https://www.kamailio.org/docs/modules/5.6.x/modules/cnxcc.html#cnxcc.rpc.kill_call) |
| **cnxcc.stats** | [cnxcc](https://www.kamailio.org/docs/modules/5.6.x/modules/cnxcc.html#cnxcc.rpc.stats) |
| **core.aliases_list** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.aliases_list) |
| **core.arg** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.arg) |
| **core.echo** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.echo) |
| **core.flags** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.flags) |
| **core.info** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.info) |
| **core.kill** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.kill) |
| **core.modules** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.modules) |
| **core.ppdefines** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.ppdefines) |
| **core.printi** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.printi) |
| **core.prints** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.prints) |
| **core.ps** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.ps) |
| **core.psx** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.psx) |
| **core.pwd** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.pwd) |
| **core.runinfo** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.runinfo) |
| **core.shmmem** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.shmmem) |
| **core.sockets_list** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.sockets_list) |
| **core.tcp_info** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.tcp_info) |
| **core.tcp_list** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.tcp_list) |
| **core.tcp_options** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.tcp_options) |
| **core.udp4_raw_info** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.udp4_raw_info) |
| **core.uptime** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.uptime) |
| **core.version** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.core.version) |
| **corex.debug** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.debug) |
| **corex.list_aliases** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.list_aliases) |
| **corex.list_sockets** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.list_sockets) |
| **corex.pkg_summary** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.pkg_summary) |
| **corex.shm.info** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.shm.info) |
| **corex.shm.report** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.shm.report) |
| **corex.shm.stats** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.shm.stats) |
| **corex.shm_status** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.shm_status) |
| **corex.shm_summary** | [corex](https://www.kamailio.org/docs/modules/5.6.x/modules/corex.html#corex.rpc.shm_summary) |
| **cpl.get** | [cplc](https://www.kamailio.org/docs/modules/5.6.x/modules/cplc.html#cpl.r.get) |
| **cpl.load** | [cplc](https://www.kamailio.org/docs/modules/5.6.x/modules/cplc.html#cpl.r.load) |
| **cpl.remove** | [cplc](https://www.kamailio.org/docs/modules/5.6.x/modules/cplc.html#cpl.r.remove) |

## [d]

| Name | Module Name |
|------|-------------|
| **dbcl.disable_connection** | [db_cluster](https://www.kamailio.org/docs/modules/5.6.x/modules/db_cluster.html#dbcl.disable_connection) |
| **dbcl.enable_connection** | [db_cluster](https://www.kamailio.org/docs/modules/5.6.x/modules/db_cluster.html#dbcl.enable_connection) |
| **dbcl.list_clusters** | [db_cluster](https://www.kamailio.org/docs/modules/5.6.x/modules/db_cluster.html#dbcl.list_clusters) |
| **dbcl.list_connections** | [db_cluster](https://www.kamailio.org/docs/modules/5.6.x/modules/db_cluster.html#dbcl.list_connections) |
| **dbg.bp** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.bp) |
| **dbg.get_mod_facility** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.get_mod_facility) |
| **dbg.get_mod_level** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.get_mod_level) |
| **dbg.ls** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.ls) |
| **dbg.mod_level** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.mod_level) |
| **dbg.reset_msgid** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.reset_msgid) |
| **dbg.set_mod_facility** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.set_mod_facility) |
| **dbg.set_mod_level** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.set_mod_level) |
| **dbg.trace** | [debugger](https://www.kamailio.org/docs/modules/5.6.x/modules/debugger.html#dbg.r.trace) |
| **db_berkely.reload** | [db_berkeley](https://www.kamailio.org/docs/modules/5.6.x/modules/db_berkeley.html#db_berkely.rpc.reload) |
| **dialplan.dump** | [dialplan](https://www.kamailio.org/docs/modules/5.6.x/modules/dialplan.html#dialplan.r.dp.dump) |
| **dialplan.reload** | [dialplan](https://www.kamailio.org/docs/modules/5.6.x/modules/dialplan.html#dialplan.r.dp.reload) |
| **dialplan.translate** | [dialplan](https://www.kamailio.org/docs/modules/5.6.x/modules/dialplan.html#dialplan.r.dp.translate) |
| **dispatcher.add** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.add) |
| **dispatcher.hash** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.hash) |
| **dispatcher.list** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.list) |
| **dispatcher.ping_active** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.ping_active) |
| **dispatcher.reload** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.reload) |
| **dispatcher.remove** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.remove) |
| **dispatcher.set_duid_state** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.set_duid_state) |
| **dispatcher.set_state** | [dispatcher](https://www.kamailio.org/docs/modules/5.6.x/modules/dispatcher.html#dispatcher.r.set_state) |
| **dlg.bridge_dlg** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.bridge_dlg) |
| **dlg.bridge_dlg** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.briefing** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.briefing) |
| **dlg.dlg_list** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.dlg_list) |
| **dlg.dlg_list** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.dlg_list_ctx** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.dlg_list_ctx) |
| **dlg.dlg_list_ctx** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.dump_file** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.dump_file) |
| **dlg.end_dlg** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html) |
| **dlg.end_dlg** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.is_alive** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.is_alive) |
| **dlg.list** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.list) |
| **dlg.list** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.list_ctx** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.list_ctx) |
| **dlg.list_ctx** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.list_match** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.list_match) |
| **dlg.list_match_ctx** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.list_match_ctx) |
| **dlg.profile_get_size** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.profile_get_size) |
| **dlg.profile_get_size** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.profile_list** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.profile_list) |
| **dlg.profile_list** | [ims_dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_dialog.html) |
| **dlg.set_state** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html) |
| **dlg.stats_active** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.stats_active) |
| **dlg.terminate_dlg** | [dialog](https://www.kamailio.org/docs/modules/5.6.x/modules/dialog.html#dlg.r.terminate_dlg) |
| **dlgs.briefing** | [dlgs](https://www.kamailio.org/docs/modules/5.6.x/modules/dlgs.html#dlgs.rpc.briefing) |
| **dlgs.get** | [dlgs](https://www.kamailio.org/docs/modules/5.6.x/modules/dlgs.html#dlgs.rpc.get) |
| **dlgs.getall** | [dlgs](https://www.kamailio.org/docs/modules/5.6.x/modules/dlgs.html#dlgs.rpc.getall) |
| **dlgs.list** | [dlgs](https://www.kamailio.org/docs/modules/5.6.x/modules/dlgs.html#dlgs.rpc.list) |
| **dlgs.stats** | [dlgs](https://www.kamailio.org/docs/modules/5.6.x/modules/dlgs.html#dlgs.rpc.stats) |
| **dmq.list_nodes** | [dmq](https://www.kamailio.org/docs/modules/5.6.x/modules/dmq.html#dmq.r.list_nodes) |
| **dmq.remove** | [dmq](https://www.kamailio.org/docs/modules/5.6.x/modules/dmq.html#dmq.r.remove) |
| **domain.dump** | [domain](https://www.kamailio.org/docs/modules/5.6.x/modules/domain.html#domain.rpc.dump) |
| **domain.reload** | [domain](https://www.kamailio.org/docs/modules/5.6.x/modules/domain.html#domain.rpc.reload) |
| **drouting.reload** | [drouting](https://www.kamailio.org/docs/modules/5.6.x/modules/drouting.html#drouting.rpc.reload) |

## [e]

| Name | Module Name |
|------|-------------|
| **evrexec.run** | [evrexec](https://www.kamailio.org/docs/modules/5.6.x/modules/evrexec.html#evrexec.r.run) |

## [f]

| Name | Module Name |
|------|-------------|

## [g]

| Name | Module Name |
|------|-------------|
| **geoip2.reload** | [geoip2](https://www.kamailio.org/docs/modules/5.6.x/modules/geoip2.html#geoip2.r.reload) |

## [h]

| Name | Module Name |
|------|-------------|
| **htable.delete htable key** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.delete) |
| **htable.dump htable** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.dump) |
| **htable.flush htable** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.flush) |
| **htable.get htable key** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.get) |
| **htable.listTables** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.listTables) |
| **htable.reload htable** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.reload) |
| **htable.setex htable key expire** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.setex) |
| **htable.seti htable key value** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.seti) |
| **htable.sets htable key value** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.sets) |
| **htable.setxi htable key value expire** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.setxi) |
| **htable.setxs htable key value expire** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.setxs) |
| **htable.stats** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.stats) |
| **htable.store htable** | [htable](https://www.kamailio.org/docs/modules/5.6.x/modules/htable.html#htable.rpc.store) |
| **httpclient.listcon** | [http_client](https://www.kamailio.org/docs/modules/5.6.x/modules/http_client.html#httpclient.r.httpclient.listcon) |

## [i]

| Name | Module Name |
|------|-------------|
| **imc.list_members** | [imc](https://www.kamailio.org/docs/modules/5.6.x/modules/imc.html#imc.r.list_members) |
| **imc.list_rooms** | [imc](https://www.kamailio.org/docs/modules/5.6.x/modules/imc.html#imc.r.list_rooms) |

## [j]

| Name | Module Name |
|------|-------------|

## [k]

| Name | Module Name |
|------|-------------|

## [l]

| Name | Module Name |
|------|-------------|
| **lcr.defunct_gw** | [lcr](https://www.kamailio.org/docs/modules/5.6.x/modules/lcr.html#lcr.rpc.defunct_gw) |
| **lcr.dump_gws** | [lcr](https://www.kamailio.org/docs/modules/5.6.x/modules/lcr.html#lcr.rpc.dump_gws) |
| **lcr.dump_rules** | [lcr](https://www.kamailio.org/docs/modules/5.6.x/modules/lcr.html#lcr.rpc.dump_rules) |
| **lcr.load_gws** | [lcr](https://www.kamailio.org/docs/modules/5.6.x/modules/lcr.html#lcr.rpc.load_gws) |
| **lcr.reload** | [lcr](https://www.kamailio.org/docs/modules/5.6.x/modules/lcr.html#lcr.rpc.reload) |

## [m]

| Name | Module Name |
|------|-------------|
| **matrix.reload** | [matrix](https://www.kamailio.org/docs/modules/5.6.x/modules/matrix.html#matrix.rpc.reload) |
| **mod.mem_stats** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.mod.mem_stats) |
| **mod.mem_statsx** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.mod.mem_statsx) |
| **mod.stats** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.mod.stats) |
| **mohqueue.debug** | [mohqueue](https://www.kamailio.org/docs/modules/5.6.x/modules/mohqueue.html#rpc.debug) |
| **mohqueue.drop_call** | [mohqueue](https://www.kamailio.org/docs/modules/5.6.x/modules/mohqueue.html#rpc.drop_call) |
| **mqueue.fetch** | [mqueue](https://www.kamailio.org/docs/modules/5.6.x/modules/mqueue.html#mqueue.r.fetch) |
| **mqueue.get_size** | [mqueue](https://www.kamailio.org/docs/modules/5.6.x/modules/mqueue.html#mqueue.r.get_size) |
| **mqueue.get_sizes** | [mqueue](https://www.kamailio.org/docs/modules/5.6.x/modules/mqueue.html#mqueue.r.get_sizes) |
| **msrp.cmaplist** | [msrp](https://www.kamailio.org/docs/modules/5.6.x/modules/msrp.html#msrp.r.msrp.cmaplist) |
| **mtree.list** | [mtree](https://www.kamailio.org/docs/modules/5.6.x/modules/mtree.html#mtree.rpc.list) |
| **mtree.match** | [mtree](https://www.kamailio.org/docs/modules/5.6.x/modules/mtree.html#mtree.rpc.match) |
| **mtree.reload** | [mtree](https://www.kamailio.org/docs/modules/5.6.x/modules/mtree.html#mtree.rpc.reload) |
| **mtree.summary** | [mtree](https://www.kamailio.org/docs/modules/5.6.x/modules/mtree.html#mtree.rpc.summary) |

## [n]

| Name | Module Name |
|------|-------------|
| **nathelper.enable_ping** | [nathelper](https://www.kamailio.org/docs/modules/5.6.x/modules/nathelper.html#nathelper.r.enable_ping) |

## [o]

| Name | Module Name |
|------|-------------|

## [p]

| Name | Module Name |
|------|-------------|
| **pdb.activate** | [pdb](https://www.kamailio.org/docs/modules/5.6.x/modules/pdb.html#pdb.r.activate) |
| **pdb.deactivate** | [pdb](https://www.kamailio.org/docs/modules/5.6.x/modules/pdb.html#pdb.r.deactivate) |
| **pdb.status** | [pdb](https://www.kamailio.org/docs/modules/5.6.x/modules/pdb.html#pdb.r.status) |
| **pdt.list** | [pdt](https://www.kamailio.org/docs/modules/5.6.x/modules/pdt.html) |
| **pdt.reload** | [pdt](https://www.kamailio.org/docs/modules/5.6.x/modules/pdt.html) |
| **permissions.addressDump** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.addressDump) |
| **permissions.addressReload** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.addressReload) |
| **permissions.allowUri** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.allowUri) |
| **permissions.domainDump** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.domainDump) |
| **permissions.subnetDump** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.subnetDump) |
| **permissions.testUri** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.testUri) |
| **permissions.trustedDump** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.trustedDump) |
| **permissions.trustedReload** | [permissions](https://www.kamailio.org/docs/modules/5.6.x/modules/permissions.html#permissions.r.trustedReload) |
| **pike.top** | [pike](https://www.kamailio.org/docs/modules/5.6.x/modules/pike.html#pike.rpc.top) |
| **pkg.info** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.pkg.info) |
| **pkg.stats** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.pkg.stats) |
| **pl.get_pid** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.get_pid) |
| **pl.get_pipes** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.get_pipes) |
| **pl.list** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.list) |
| **pl.push_load** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.push_load) |
| **pl.set_pid** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.set_pid) |
| **pl.set_pipe** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.set_pipe) |
| **pl.stats** | [pipelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/pipelimit.html#pipelimit.r.pl.stats) |
| **presence.cleanup** | [presence](https://www.kamailio.org/docs/modules/5.6.x/modules/presence.html#presence.r.cleanup) |
| **presence.presentity_list** | [presence](https://www.kamailio.org/docs/modules/5.6.x/modules/presence.html#presence.rpc.presentity_list) |
| **presence.refreshWatchers** | [presence](https://www.kamailio.org/docs/modules/5.6.x/modules/presence.html#presence.r.refreshWatchers) |
| **presence.updateWatchers** | [presence](https://www.kamailio.org/docs/modules/5.6.x/modules/presence.html#presence.rpc.updateWatchers) |
| **pua.cleanup** | [pua](https://www.kamailio.org/docs/modules/5.6.x/modules/pua.html#pua.r.cleanup) |
| **pua.publish** | [pua_rpc](https://www.kamailio.org/docs/modules/5.6.x/modules/pua_rpc.html#pua_rpc.r.pua.publish) |
| **pua.send_publish** | [pua_rpc](https://www.kamailio.org/docs/modules/5.6.x/modules/pua_rpc.html#pua_rpc.r.pua.send_publish) |
| **pua.subscribe** | [pua_rpc](https://www.kamailio.org/docs/modules/5.6.x/modules/pua_rpc.html#pua_rpc.r.subscribe) |
| **pv.shvGet** | [pv](https://www.kamailio.org/docs/modules/5.6.x/modules/pv.html#pv.rpc.shvGet) |
| **pv.shvSet** | [pv](https://www.kamailio.org/docs/modules/5.6.x/modules/pv.html#pv.rpc.shvSet) |

## [q]

| Name | Module Name |
|------|-------------|

## [r]

| Name | Module Name |
|------|-------------|
| **regex.reload** | [regex](https://www.kamailio.org/docs/modules/5.6.x/modules/regex.html#regex.r.regex_reload) |
| **regscscf.dereg_impu** | [ims_registrar_scscf](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_registrar_scscf.html) |
| **rl.get_pid** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.get_pipes** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.get_queues** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.push_load** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.set_dbg** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.set_pid** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.set_pipe** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.set_queue** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rl.stats** | [ratelimit](https://www.kamailio.org/docs/modules/5.6.x/modules/ratelimit.html) |
| **rls.cleanup** | [rls](https://www.kamailio.org/docs/modules/5.6.x/modules/rls.html#rls.rpc.cleanup) |
| **rls.update_subs** | [rls](https://www.kamailio.org/docs/modules/5.6.x/modules/rls.html#rls.rpc.update_subs) |
| **rtpengine.enable proxy_url/all 0/1** | [rtpengine](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpengine.html#rtpengine.r.enable) |
| **rtpengine.get_hash_total** | [rtpengine](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpengine.html#rtpengine.m.show_hash_total) |
| **rtpengine.ping proxy_url/all** | [rtpengine](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpengine.html#rtpengine.m.ping) |
| **rtpengine.reload** | [rtpengine](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpengine.html#rtpengine.r.reload) |
| **rtpengine.show proxy_url/all** | [rtpengine](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpengine.html#rtpengine.r.show) |
| **rtpproxy.enable** | [rtpproxy](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpproxy.html#rtpproxy.r.enable) |
| **rtpproxy.list** | [rtpproxy](https://www.kamailio.org/docs/modules/5.6.x/modules/rtpproxy.html#rtpproxy.r.list) |

## [s]

| Name | Module Name |
|------|-------------|
| **sctp.info** | [sctp](https://www.kamailio.org/docs/modules/5.6.x/modules/sctp.html#sctp.r.sctp.info) |
| **sctp.options** | [sctp](https://www.kamailio.org/docs/modules/5.6.x/modules/sctp.html#sctp.r.sctp.) |
| **sipcapture.status param** | [sipcapture](https://www.kamailio.org/docs/modules/5.6.x/modules/sipcapture.html#sipcapture.r.sipcapture.status) |
| **sipdump.enable** | [sipdump](https://www.kamailio.org/docs/modules/5.6.x/modules/sipdump.html#sipdump.rpc.enable) |
| **siptrace.status param** | [siptrace](https://www.kamailio.org/docs/modules/5.6.x/modules/siptrace.html#siptrace.r.siptrace.status) |
| **stats.clear_statistics** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.stats.clear_statistics) |
| **stats.fetch** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.stats.fetch) |
| **stats.fetchn** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.stats.fetchn) |
| **stats.get_statistics** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.stats.get_statistics) |
| **stats.reset_statistics** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.stats.reset_statistics) |
| **statsc.report** | [statsc](https://www.kamailio.org/docs/modules/5.6.x/modules/statsc.html#statsc.rpc.report) |
| **system.listMethods** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.system.listMethods) |
| **system.methodHelp** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.system.methodHelp) |
| **system.methodSignature** | [kex](https://www.kamailio.org/docs/modules/5.6.x/modules/kex.html#kex.r.system.methodSignature) |

## [t]

| Name | Module Name |
|------|-------------|
| **ts.dump** | [tsilo](https://www.kamailio.org/docs/modules/5.6.x/modules/tsilo.html#tsilo.rpc.ts.dump) |
| **ts.lookup** | [tsilo](https://www.kamailio.org/docs/modules/5.6.x/modules/tsilo.html#tsilo.rpc.ts.lookup) |

## [u]

| Name | Module Name |
|------|-------------|
| **uac.reg_active** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_active) |
| **uac.reg_add** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_add) |
| **uac.reg_disable** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_disable) |
| **uac.reg_dump** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_dump) |
| **uac.reg_enable** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_enable) |
| **uac.reg_info** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_info) |
| **uac.reg_refresh** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_refresh) |
| **uac.reg_reload** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_reload) |
| **uac.reg_remove** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_remove) |
| **uac.reg_unregister** | [uac](https://www.kamailio.org/docs/modules/5.6.x/modules/uac.html#uac.r.uac.reg_unregister) |
| **ul.add** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.add) |
| **ul.db_contacts** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.db_contacts) |
| **ul.db_expired_contacts** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.db_expired_contacts) |
| **ul.db_users** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.db_users) |
| **ul.dump** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.dump) |
| **ul.flush** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.flush) |
| **ul.lookup table AOR** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.lookup) |
| **ul.rm table AOR** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.rm) |
| **ul.rm_contact table AOR contact** | [usrloc](https://www.kamailio.org/docs/modules/5.6.x/modules/usrloc.html#usrloc.r.rm_contact) |
| **ulpcscf.status** | [ims_usrloc_pcscf](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_usrloc_pcscf.html) |
| **ulscscf.showimpu** | [ims_usrloc_scscf](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_usrloc_scscf.html#ims_usrloc_scscf.r.showimpu) |
| **ulscscf.snapshot** | [ims_usrloc_scscf](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_usrloc_scscf.html#ims_usrloc_scscf.r.snapshot) |
| **ulscscf.status** | [ims_usrloc_scscf](https://www.kamailio.org/docs/modules/5.6.x/modules/ims_usrloc_scscf.html#ims_usrloc_scscf.r.status) |
| **userblocklist.check_allowlist prefix** | [userblocklist](https://www.kamailio.org/docs/modules/5.6.x/modules/userblocklist.html#userblocklist.r.check_allowlist) |
| **userblocklist.check_blocklist prefix** | [userblocklist](https://www.kamailio.org/docs/modules/5.6.x/modules/userblocklist.html#userblocklist.r.check_blocklist) |
| **userblocklist.check_userallowlist prefix user [domain]** | [userblocklist](https://www.kamailio.org/docs/modules/5.6.x/modules/userblocklist.html#userblocklist.r.check_userallowlist) |
| **userblocklist.check_userblocklist prefix user [domain]** | [userblocklist](https://www.kamailio.org/docs/modules/5.6.x/modules/userblocklist.html#userblocklist.r.check_userblocklist) |
| **userblocklist.dump_blocklist** | [userblocklist](https://www.kamailio.org/docs/modules/5.6.x/modules/userblocklist.html#userblocklist.r.dump_blocklist) |
| **userblocklist.reload_blocklist** | [userblocklist](https://www.kamailio.org/docs/modules/5.6.x/modules/userblocklist.html#userblocklist.r.reload_blocklist) |

## [v]

| Name | Module Name |
|------|-------------|

## [w]

| Name | Module Name |
|------|-------------|
| **ws.close** | [websocket](https://www.kamailio.org/docs/modules/5.6.x/modules/websocket.html#websocket.rpc.ws.close) |
| **ws.disable** | [websocket](https://www.kamailio.org/docs/modules/5.6.x/modules/websocket.html#websocket.rpc.ws.disable) |
| **ws.dump** | [websocket](https://www.kamailio.org/docs/modules/5.6.x/modules/websocket.html#websocket.rpc.ws.dump) |
| **ws.enable** | [websocket](https://www.kamailio.org/docs/modules/5.6.x/modules/websocket.html#websocket.rpc.ws.enable) |
| **ws.ping** | [websocket](https://www.kamailio.org/docs/modules/5.6.x/modules/websocket.html#websocket.rpc.ws.ping) |
| **ws.pong** | [websocket](https://www.kamailio.org/docs/modules/5.6.x/modules/websocket.html#websocket.rpc.ws.pong) |

## [x]

| Name | Module Name |
|------|-------------|
| **xcap_client.refreshXcapDoc** | [xcap_client](https://www.kamailio.org/docs/modules/5.6.x/modules/xcap_client.html#xcap_client.rpc.refreshXcapDoc) |
| **xhttp_pi.reload** | [xhttp_pi](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_pi.html) |
| **xhttp_prom.counter_inc** | [xhttp_prom](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_prom.html#xhttp_prom.rpc.counter_inc) |
| **xhttp_prom.counter_reset** | [xhttp_prom](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_prom.html#xhttp_prom.rpc.counter_reset) |
| **xhttp_prom.gauge_reset** | [xhttp_prom](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_prom.html#xhttp_prom.rpc.gauge_reset) |
| **xhttp_prom.gauge_set** | [xhttp_prom](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_prom.html#xhttp_prom.rpc.gauge_set) |
| **xhttp_prom.histogram_observe** | [xhttp_prom](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_prom.html#xhttp_prom.rpc.histogram_observe) |
| **xhttp_prom.metric_list_print** | [xhttp_prom](https://www.kamailio.org/docs/modules/5.6.x/modules/xhttp_prom.html#xhttp_prom.rpc.metric_list_print) |

## [y]

| Name | Module Name |
|------|-------------|

## [z]

| Name | Module Name |
|------|-------------|
